feat: add clear button to input

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     <p class="container__memory">Mem: <span>0</span></p>
 
     <div class="container__input">
-        <input type="text" spellcheck="false" autofocus onblur="this.focus()">
+        <input type="search" spellcheck="false" autofocus onblur="this.focus()">
     </div>
     
     <span class="container__message">Message</span>
