fix: wrong button name

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
     <span class="container__message">Message</span>
 
     <div class="container__btns">
-      <button tabindex="-1" id="btn-memrem">MR</button>
+      <button tabindex="-1" id="btn-memrem">MC</button>
       <button tabindex="-1" id="btn-memminus">M-</button>
       <button tabindex="-1" id="btn-memplus">M+</button>
       <button tabindex="-1" id="btn-root">√</button>
